2003-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* automake/compila.am: Remove ARCH.

2003-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Require automake >= 1.8, autoconf >= 2.59.

2003-12-01	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* automake/compile.am: Add $(ARCH)/$(dirstamp) rules.
	* aclocal/lead-dot.m4: New (from automake-1.7f).
	* aclocal/rtems-top.m4: Require AM_SET_LEADING_DOT.
	Add AC_SUBST(dirstamp).

2003-11-26	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/canonical-target-name.m4, aclocal/canonicalize-tools.m4,
	aclocal/check-custom-bsp.m4, aclocal/check-cxx.m4,
	aclocal/check-itron.m4, aclocal/check-multiprocessing.m4,
	aclocal/check-networking.m4, aclocal/check-posix.m4,
	aclocal/check-tool.m4, aclocal/config-subdirs.m4,
	aclocal/enable-bare.m4, aclocal/enable-cxx.m4,
	aclocal/enable-itron.m4, aclocal/enable-multiprocessing.m4,
	aclocal/enable-networking.m4, aclocal/enable-posix.m4,
	aclocal/enable-rtemsbsp.m4, aclocal/enable-tests.m4,
	aclocal/env-rtemsbsp.m4, aclocal/gcc-isystem.m4,
	aclocal/gcc-pipe.m4, aclocal/gcc-specs.m4,
	aclocal/multilib.m4, aclocal/path-ksh.m4,
	aclocal/prog-cc.m4, aclocal/prog-cxx.m4,
	aclocal/project-root.m4, aclocal/rtems-test-no-pause.m4,
	aclocal/rtems-top.m4, aclocal/target.m4,
	aclocal/tool-paths.m4:
	Fix underquoting to silence automake-1.8.

2003-11-10	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Reflect having moved to testsuites/.

2003-10-23	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/rtems-top.m4: Add support for --with-project-root.
	Remove RTEMS Version message.

2003-10-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/canonical-host.m4: Remove.
	* aclocal/canonical-target-name.m4: Merge-in aclocal/canonical-host.m4.

2003-10-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove RTEMS_CANONICAL_HOST.

2003-10-20	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/check-multiprocessing.m4: Don't require RTEMS_BSP_ALIAS.